# stemfard

./: README.md  publish.txt  pyproject.toml  versioning.txt
new/core/: __init__.py  _isinstance.py  models.py
new/maths/linalg_iterative/: __init__.py  _base.py  _common.py  _parse_params.py
new/maths/linalg_matrix_arithmetics/: __init__.py  _base.py  _parse_params.py  arithmetics.py  core.py
new/stats/core/: descriptives.py  test_stats.py
new/stats/descriptives/: __init__.py  _base.py  _freq_tally.py  _steps_mean.py
new/stats/means_ttests/TwoSamplesDataVars/: models.py
new/stats/regression_linear/: _base.py  _parsed_params.py  core.py  r_squared.py  regress.py
new/stats/stats_grouped_data/: models.py  params_factory.py
new2/: __init__.py
new2/core/: _html.py  _parse_compute.py  _strings.py  _type_aliases.py  arrays_highlight.py  constants.py  warning_msgs.py
new2/maths/: base_.py
new2/maths/IVPs/: taylor.py
new2/maths/linalg_arithmetics/matrices/: _base.py  _common.py  _parse_params.py  api.py  api_steps.py
new2/maths/linalg_iterative/: _base.py  jacobi.py  solve.py
new2/maths/linalg_matrix_arithmetics/: _basex.py  core.py
new2/stats/descriptives/: _base.py  _parse_params.py  _tables.py  dispersion.py  location.py  others.py  position.py  shape.py
new2/stats/means_ttests/OneSampleData/: models.py
new2/stats/regression_linear/: __init__.py  _base.py  _classes.py  _parsed_params.py  api.py  core.py  core_classes.py  regress.py
new2/stats/stats_grouped_data/steps/: percentiles.py
new2/stemfard/core/: _io.py  _parse_compute.py  _strings.py  _validate.py  arrays_general.py  dframes.py  utils_classes.py
new2/stemfard/maths/IVPs/: _parse_params.py
new3/stemfard/core/: _io.py  _isinstance.py  _latex.py  _strings.py  _type_aliases.py  _validate.py  _verify_param_operations.py  models.py  results.py  serialization.py  signs.py
new3/stemfard/interpolation/: dispatcher.py  validated_request.py
new4/stemfard/: __init__.py  conference.txt
new4/stemfard/core/: _enumerate.py  _is_dtypes.py  _isinstance.py  _validate.py  _verify_param_operations.py  convert.py  dframes.py  models.py  rounding.py  statistical_tables.py  utils_classes.py
new4/stemfard/interpolation/: __init__.py  api.py  interpolate.py  request.py  result.py
src/stemfard/: __init__.py
src/stemfard/core/: __init__.py  _html.py  _strings.py  _type_aliases.py  constants.py  convert.py  dframes.py  display_values_per_column.py  errors.py  results.py  utils.py  utils_classes.py
src/stemfard/stats/: __init__.py  core.py  eda copy.py  eda.py  utils.py
(+102 files in other folders)
