[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stemfard"
version = "0.0.2a1"
description = "A Python library for mathematical and Statistical Computing in Science, Technology, Engineering and Mathematics (STEM)."
authors = [
    { name="STEM Research", email="stemfard@stemfard.org" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["sympy>=1.12"]
readme = "README.md"
license = { text = "MIT" }  # Keep this as is or use license = "MIT"
requires-python = ">=3.9"
keywords = ["linear algebra"]

[project.urls]
Homepage = "https://github.com/stemfard/stemfard"
Documentation = "https://github.com/stemfard/stemfard#readme"
Source = "https://github.com/stemfard/stemfard"

# FIX FOR PACKAGE DISCOVERY ISSUE
# Explicitly define packages
[tool.setuptools]
packages = ["core", "maths", "stats"]