[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stemfard"
version = "0.0.2a1"
description = "A Python library for mathematical and Statistical Computing in STEM."
authors = [
    { name="STEM Research", email="stemfard@stemfard.org" }
]
dependencies = ["sympy>=1.12"]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["linear algebra"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/stemfard/stemfard"
Documentation = "https://github.com/stemfard/stemfard#readme"
Source = "https://github.com/stemfard/stemfard"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]